# blackforge

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
docs/: language.md
examples/: hello.bf  tiny_classification.bf  tiny_classification_dataset.bfdata  tiny_forecast.bf  tiny_lm.bf  tiny_lm_dataset.bfdata  tiny_regression.bf  tiny_regression_dataset.bfdata
include/blackforge/ast/: ast.hpp
include/blackforge/backend/: lr_schedule.hpp
include/blackforge/backend/cpu/: autodiff.hpp  benchmark.hpp  checkpoint.hpp  executor.hpp  forecast_runner.hpp  loss.hpp  model.hpp  ops.hpp  optimizer.hpp  quantize.hpp  random_init.hpp  train_runner.hpp
include/blackforge/backend/cuda/: attention_batched.hpp  autodiff.hpp  checkpoint.hpp  cuda_check.hpp  device_pool.hpp  device_query.hpp  device_tensor.hpp  executor.hpp  fused_attention.hpp  loss.hpp  model.hpp  multi_gpu_train_runner.hpp  ops.hpp  optimizer.hpp  train_runner.hpp
include/blackforge/data/: dataset.hpp
include/blackforge/diagnostics/: diagnostic.hpp
include/blackforge/frontend/: lexer.hpp  parser.hpp  token.hpp
include/blackforge/ir/: ir_builder.hpp  module.hpp  operation.hpp  value.hpp
include/blackforge/runtime/: device.hpp  tensor.hpp
include/blackforge/sema/: dtype.hpp  semantic_analyzer.hpp
include/blackforge/tokenizer/: dataset_prep.hpp  tokenizer.hpp
src/: main.cpp
src/ast/: ast.cpp
src/backend/cpu/: autodiff.cpp  benchmark.cpp  checkpoint.cpp  executor.cpp  forecast_runner.cpp  loss.cpp  model.cpp  ops.cpp  optimizer.cpp  quantize.cpp  random_init.cpp  train_runner.cpp
src/backend/cuda/: attention_batched.cu  autodiff.cu  checkpoint.cu  device_pool.cu  device_query.cu  device_tensor.cu  executor.cu  fused_attention.cu  loss.cu  model.cu  multi_gpu_train_runner.cu  ops_elementwise.cu  ops_gemm.cu  ops_tensorcore.cu  ops_transformer.cu  optimizer.cu  train_runner.cu
src/data/: dataset.cpp
src/diagnostics/: diagnostic.cpp
src/frontend/: lexer.cpp  parser.cpp  token.cpp
src/ir/: ir_builder.cpp  module.cpp  operation.cpp  value.cpp
src/runtime/: device.cpp  tensor.cpp
src/sema/: dtype.cpp  semantic_analyzer.cpp
src/tokenizer/: dataset_prep.cpp  tokenizer.cpp
tests/: CMakeLists.txt
tests/backend/: lr_schedule_tests.cpp
tests/backend/cpu/: autodiff_tests.cpp  benchmark_tests.cpp  checkpoint_tests.cpp  executor_tests.cpp  forecast_runner_tests.cpp  loss_tests.cpp  model_tests.cpp  ops_tests.cpp  optimizer_tests.cpp  quantize_tests.cpp  train_runner_tests.cpp
tests/backend/cuda/: autodiff_tests.cu  device_query_tests.cu  executor_tests.cu  loss_tests.cu  model_tests.cu  multi_gpu_train_runner_tests.cu  ops_tests.cu  optimizer_tests.cu  train_runner_tests.cu
tests/data/: dataset_tests.cpp
tests/frontend/: lexer_tests.cpp  parser_tests.cpp
tests/ir/: ir_builder_tests.cpp
tests/runtime/: tensor_tests.cpp
tests/sema/: dtype_tests.cpp  semantic_analyzer_tests.cpp
tests/tokenizer/: dataset_prep_tests.cpp  tokenizer_tests.cpp
